# advattacks

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  mypy.ini  prefixes.txt  pyproject.toml  run.py
advattacks/: loss.py  prefixes.py  utils.py
advattacks/attack/: __init__.py  pgd.py
advattacks/wrapper/: __init__.py  instructblip.py  llava.py  qwen.py
data/questions/: 01-Illegal_Activitiy.json  02-HateSpeech.json  03-Malware_Generation.json  04-Physical_Harm.json  05-EconomicHarm.json  06-Fraud.json  07-Sex.json  08-Privacy_Violence.json
model/: README.md
ref/: README.md  README_en.md  instruct_blip_infer.py  llava_infer.py  qwen_infer.py
scripts/: ansi.py  display.py  evaluator.py  loader.py  logger.py  memo.py  visualizer.py
tests/: conftest.py  test_attack.py  test_loss.py  test_utils.py  test_wrapper.py
