[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2,<3" ]

[project]
name = "advattacks"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "BoChenSHEN", email = "6goddddddd@gmail.com" },
]
requires-python = ">=3.11,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "foolbox>=3.3,<4",
  "loguru>=0.7,<0.8",
  "pillow>=11,<13",
  "torch>=2.7,<3",
  "torchattacks>=3.5,<4",
  "torchvision>=0.22,<0.25",
  "tqdm>=4.66,<5",
  "transformers>=4.57,<5",
]

optional-dependencies.dev = [ "pre-commit>=4.5,<5", "ruff>=0.14.6,<0.15" ]
